crates/crucible-cli/src/tui/ink/tests/snapshots/crucible_cli__tui__ink__tests__chat_app_snapshot_tests__snapshot_notification_visible.snap
---
source: crates/crucible-cli/src/tui/ink/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---


▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >                                                                              
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 Plan │ 0% ctx                                             Ctrl+C again to quit
