crates/crucible-cli/src/tui/ink/tests/snapshots/crucible_cli__tui__ink__tests__chat_app_snapshot_tests__snapshot_popup_with_selection_moved.snap
---
source: crates/crucible-cli/src/tui/ink/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >                                                                              
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 NORMAL  ... 
   tool semantic_search  Search notes by meaning                               
   tool create_note  Create a new note                                         
 ▸ command /mode  Cycle chat mode                                              
   command /help  Show help
